--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.27",
+    "framer-motion": "^10.16.4",
     "next": "14.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
